@@ -18,16 +18,18 @@ from Products.CompositePack.exceptions import CompositePackError
 from Products.CMFCore.utils import getToolByName
 from DocumentTemplate.DT_Util import safe_callable
 from Acquisition import aq_base, aq_parent, aq_inner
+from zope.interface import implements
 
 TARGET = 'target'
 VIEWLET = 'viewlet'
+
 
 class Element(BaseContentMixin):
     """A basic, Archetypes-based Composite Element
     that uses references instead of path, and a dropdown
     for selecting templates
     """
-    __implements__ = BaseContentMixin.__implements__ + (ICompositeElement,)
+    implements(ICompositeElement)
     meta_type = portal_type = archetype_name = 'CompositePack Element'
     global_allow = 0
 
