@@ -27,7 +27,7 @@ from Products.PageTemplates.ZopePageTemplate import manage_addPageTemplate
 
 from Products.PythonScripts.standard import url_quote
 
-from Products.CMFCore.CMFCorePermissions import ManagePortal
+from Products.CMFCore.permissions import ManagePortal
 from Products.CMFCore.utils import getToolByName
 
 from Products.kupu.plone.plonelibrarytool import PloneKupuLibraryTool
