@@ -1,3 +1,7 @@
+
+* Made compatible with Plone 3 and CompositePage from svn.zope.org.
+  [hathawsh]
+
 * At the end of _initObjects update the kupu library, so composables
   are registered correctly there.
   [jladage,maurits]
